--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -73,7 +73,7 @@
   <header class="site-header">
     <div class="container">
       <h1 class="logo">Портфолио</h1>
-      <p class="student-name">Тимур С.</p>
+      <p class="student-name">Данила Бочаров</p>
       <button class="nav-toggle" aria-label="Открыть меню">☰</button>
       <nav class="main-nav">
           <a href="../index.html">Главная</a>
@@ -109,7 +109,7 @@
   </main>
 
   <footer class="site-footer">
-    <div class="container">Не защищено никем. 2025</div>
+    <div class="container">2025</div>
   </footer>
 
   <script src="../scripts/form-validation.js"></script>
