--- a/pages/projects.html
+++ b/pages/projects.html
@@ -69,7 +69,7 @@
   <header class="site-header">
     <div class="container">
       <h1 class="logo">Портфолио</h1>
-      <p class="student-name">Тимур С.</p>
+      <p class="student-name">Данила Бочаров</p>
       <button class="nav-toggle" aria-label="Открыть меню">☰</button>
       <nav class="main-nav">
           <a href="../index.html">Главная</a>
@@ -93,24 +93,24 @@
 
       <div class="grid">
         <article class="project-card" data-type="html" id="proj1">
-          <img src="../images/project1.jpg" alt="Личный сайт">
-          <h3>Личный сайт</h3>
+          <img src="../images/project1.jpg" alt="Заглушка">
+          <h3>Заглушка</h3>
           <p>HTML, CSS</p>
-          <a class="btn" href="https://sksk-a.github.io/front/index.html" target="_blank">Открыть сайт</a>
+          <a class="btn" href="https://Dany188.github.io/fb2/index.html" target="_blank">Заглушка</a>
         </article>
 
         <article class="project-card" data-type="js" id="proj2">
-          <img src="../images/project2.jpg" alt="Пример 2">
-          <h3>Пример 2</h3>
+          <img src="../images/project2.jpg" alt="Заглушка 2">
+          <h3>Заглушка 2</h3>
           <p>JavaScript</p>
-          <a class="btn" href="https://sksk-a.github.io/apofapffdpfd/index.html" target="_blank">Открыть сайт</a>
+          <a class="btn" href="https://Dany188.github.io/fb2/index.html" target="_blank">Заглушка</a>
         </article>
 
         <article class="project-card" data-type="react" id="proj3">
-          <img src="../images/project3.jpg" alt="Пример 3">
-          <h3>Пример 3</h3>
+          <img src="../images/project3.jpg" alt="Заглушка 3">
+          <h3>Заглушка 3</h3>
           <p>React</p>
-          <a class="btn" href="https://sksk-a.github.io/" target="_blank">Заглушка =(</a>
+          <a class="btn" href="https://Dany188.github.io/fb2/index.html" target="_blank">Заглушка</a>
         </article>
 
   
@@ -119,7 +119,7 @@
   </main>
 
   <footer class="site-footer">
-    <div class="container">Не защищено никем, 2025</div>
+    <div class="container">2025</div>
   </footer>
 
   <script src="../scripts/filters.js"></script>
