--- a/pages/resume.html
+++ b/pages/resume.html
@@ -16,7 +16,7 @@
     <header class="site-header">
         <div class="container">
             <h1 class="logo">Портфолио</h1>
-            <p class="student-name">Тимур С.</p>
+            <p class="student-name">Данила Бочаров</p>
             <button class="nav-toggle" aria-label="Открыть меню">☰</button>
             <nav class="main-nav">
                 <a href="../index.html">Главная</a>
@@ -35,7 +35,7 @@
 
             <div class="card" style="padding: 24px;">
                 <h3>Личная информация</h3>
-                <p><strong>Имя:</strong> Тимур</p>
+                <p><strong>Имя:</strong> Данила</p>
                 <p><strong>Возраст:</strong> 19 лет</p>
                 <p><strong>Город:</strong> Москва</p>
                 <p><strong>Email:</strong> email@primer.ru</p>
@@ -51,14 +51,14 @@
             <div class="card" style="padding: 24px; margin-top: 18px;">
                 <h3>Опыт работы</h3>
                 <ul>
-                    <li><strong>2024 — наст. время:</strong> Фриланс — разработка сайтов и лендингов для малых бизнесов.</li>
-                    <li><strong>2023:</strong> Стажировка в студии “Выдумка“ - фронтенд.</li>
+                    <li><strong>2024 — наст. время:</strong> Чем-то занимаюсь.</li>
+                    <li><strong>2023:</strong> Стажировка где-то.</li>
                 </ul>
             </div>
 
             <div class="card" style="padding: 24px; margin-top: 18px;">
                 <h3>Навыки</h3>
-                <p>HTML, CSS (Flex/Grid), JavaScript, адаптивная вёрстка, Git, React (основы).</p>
+                <p>HTML, CSS (Flex/Grid), JavaScript, адаптивная вёрстка, Git, React (основы). Это всё чем я НЕ владею свободно.</p>
             </div>
 
             <div class="card" style="padding: 24px; margin-top: 18px;">
@@ -70,7 +70,7 @@
     </main>
 
     <footer class="site-footer">
-        Не защищено никем. 2025
+        2025
     </footer>
 
     <script src="../scripts/main.js"></script>
