--- a/pages/diary.html
+++ b/pages/diary.html
@@ -44,7 +44,7 @@
   <header class="site-header">
     <div class="container">
       <h1 class="logo">Портфолио</h1>
-      <p class="student-name">Тимур С.</p>
+      <p class="student-name">Данила Бочаров</p>
       <button class="nav-toggle" aria-label="Открыть меню">☰</button>
       <nav class="main-nav">
           <a href="../index.html">Главная</a>
@@ -72,7 +72,7 @@
   </main>
 
   <footer class="site-footer">
-    <div class="container">Не защищено никем, 2025</div>
+    <div class="container">2025</div>
   </footer>
 </body>
 </html>
