--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <header class="site-header">
         <div class="container">
             <h1 class="logo">Портфолио</h1>
-            <p class="student-name">Тимур С.</p>
+            <p class="student-name">Данила Бочаров</p>
             <button class="nav-toggle" aria-label="Открыть меню">≡</button>
             <nav class="main-nav">
                 <a href="index.html">Главная</a>
@@ -154,14 +154,14 @@
             <div class="skill">
               <span>CSS</span>
               <div class="bar">
-                <div class="fill" data-width="25">25%</div>
+                <div class="fill" data-width="28">28%</div>
               </div>
             </div>
             
             <div class="skill">
               <span>JavaScript</span>
               <div class="bar">
-                <div class="fill" data-width="28">28%</div>
+                <div class="fill" data-width="26">26%</div>
               </div>
             </div>
         </section>
@@ -171,30 +171,30 @@
             <div class="projects-grid">
                 <div class="card">
                     <img src="images/project1.jpg" alt="Проект 1">
-                    <h4>Сайт-визитка</h4>
+                    <h4>Проект 1</h4>
                     <p>Мой первый сайт.</p>
-                    <a class="btn" href="https://sksk-a.github.io/front/index.html" target="_blank">Открыть сайт</a>
+                    <a class="btn" href="https://Dany188.github.io/fb2/index.html" target="_blank">Открыть сайт</a>
                 </div>
 
                 <div class="card">
                     <img src="images/project2.jpg" alt="Проект 2">
-                    <h4>Мой первый сайт</h4>
+                    <h4>Проект 2</h4>
                     <p>Это мой первый проект, который я сделал при изучении HTML.</p>
-                    <a class="btn" href="https://sksk-a.github.io/apofapffdpfd/index.html" target="_blank">Открыть сайт</a>
+                    <a class="btn" href="https://Dany188.github.io/fb2/index.html" target="_blank">Открыть сайт</a>
                 </div>
 
                 <div class="card">
                     <img src="images/project3.jpg" alt="Проект 3">
                     <h4>Проект 3</h4>
                     <p>Описание проекта 3</p>
-                    <a class="btn" href="pages/projects.html" target="_blank">Заглушка</a>
+                    <a class="btn" href="https://Dany188.github.io/fb2/index.html" target="_blank">Открыть сайт</a>
                 </div>
             </div>
         </section>
     </main>
 
     <footer class="site-footer">
-        Не защищено никем, 2025. <a href="pages/contacts.html">Контакты</a>
+        2025. <a href="pages/contacts.html">Контакты</a>
     </footer>
 
   <script src="scripts/main.js"></script>
